New ConsolePresenter to display grid for console, basic working version of game of life achieved

--- a/src/ConsoleApp/ConsoleApp.csproj
+++ b/src/ConsoleApp/ConsoleApp.csproj
@@ -9,4 +9,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="InputFiles/*.*"><CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory></None>
+  </ItemGroup>
+
 </Project>
